<resources>
    <string name="app_name">E-commerce</string>
    <string name="sales_icon">Sales</string>
    <string name="contacts_text">Контакты</string>
    <string name="about_text">Про нас</string>
    <string name="main_scene_text">Главная</string>
    <string name="logo_of_app_1">Courses</string>
    <string name="logo_of_app_2">App</string>
    <string name="course_start_date">Старт обучения:</string>
    <string name="course_level">Уровень:</string>
    <string name="course_desc">Программа обучения Джава – рассчитана на новичков в данной сфере. За программу вы изучите построение графических приложений под ПК, разработку веб сайтов на основе Java Spring Boot, изучите построение полноценных Андроид приложений и отлично изучите сам язык Джава!</string>
    <string name="aboutUs_text">На сегодняшний день программирование – одно из самых перспективных направлений. Компьютеризация коснулась всех сфер нашей жизни и этот процесс не прекращается. Это делает хороших программистов востребованными специалистами на рынке труда, без соответствующего софта ПК – просто груда железа. Программист – тот человек, который никогда не останется безработным, но на этапе обучения придется приложить массу усилий. Наша школа программирования для начинающих разработала обучающие программы так, чтобы сделать обучение максимально простым. В них соблюден баланс между теорией и практикой, есть тесты для проверки приобретенных навыков и видеоуроки.</string>
</resources>